--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ p {
 }
 
 .text-primary {
-  color: tomato;
+  color: crimson;
 }
 
 #showcase .showcase-content p {
@@ -105,6 +105,7 @@ p {
   color: aliceblue;
   background: chocolate;
   padding: 13px 20px;
+  border: none;
 }
 
 .btn:hover {
@@ -166,14 +167,97 @@ p {
   background: rgb(250, 105, 52);
 }
 
-footer {
-  text-align: center;
-  background: brown;
-  color: aliceblue;
-  padding: 20px;
+.py {
+  padding: 10px 0;
+}
+
+.l-heading {
+  font-size: 40px;
+  padding-top: 20px;
 }
 
 /* 前面的div设置了浮动，没有清除的时候，下面的div padding无法设置 */
 .clr {
   clear: both;
+}
+
+/* about-info */
+#about-info .info-left {
+  float: left;
+  width: 50%;
+  height: 100%;
+}
+
+#about-info .info-right {
+  float: right;
+  width: 50%;
+  height: 100%;
+}
+
+#about-info .info-right img {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+/* testimonials */
+#testimonials {
+  height: 600px;
+  background: url(../img/kira2.jpg) no-repeat center center/cover;
+}
+
+#testimonials h2 {
+  color: brown;
+  text-align: center;
+  padding-bottom: 40px;
+}
+
+#testimonials .testimonial {
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 5px;
+  opacity: 0.8;
+}
+
+#testimonials .testimonial img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  float: left;
+  margin-right: 20px;
+}
+
+/* contact-form */
+#contact-form .form-group {
+  margin-bottom: 20px;
+}
+
+#contact-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+#contact-form input,
+#contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #dddddd;
+}
+
+#contact-form textarea {
+  height: 200px;
+}
+
+#contact-form input:focus,
+#contact-form textarea:focus {
+  outline: none;
+  border-color: burlywood;
+}
+/* footer */
+#main-footer {
+  text-align: center;
+  background: brown;
+  color: aliceblue;
+  padding: 20px;
 }
